@@ -279,6 +279,7 @@ CONFIG_DEV_CONSOLE=y
 CONFIG_SDCLONE_DISABLE=y
 # CONFIG_SCHED_WORKQUEUE is not set
 # CONFIG_SCHED_WAITPID is not set
+CONFIG_SCHED_STARTHOOK=y
 # CONFIG_SCHED_ATEXIT is not set
 # CONFIG_SCHED_ONEXIT is not set
 CONFIG_USER_ENTRYPOINT="spawn_main"
